--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <h1>My Personal Blog</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="hansthompson.github.io/index.html">Home</a></li>
+        <li><a href="hansthompson.github.io/about.html">About</a></li>
+        <li><a href="hansthompson.github.io/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
