--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,39 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Personal Blog</title>
+  <style>
+    body {
+      background-color: lighten(blue, 50%);
+      color: rgba(50, 50, 200, 0.9);
+    }
+    header {
+      background-color: lighten(#00FF00, 50%);
+      color: rgba(0, 0, 0, 0.5);
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>My Personal Blog</h1>
+    <nav>
+      <ul>
+        <li><a href="hansthompson.github.io/index.html">Home</a></li>
+        <li><a href="hansthompson.github.io/about.html">About</a></li>
+        <li><a href="hansthompson.github.io/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <article>
+    <h2>Contact Info</h2>
+    <li><a href="hansthompson.github.io/contact.html">Twitter</a></li>    
+    <li><a href="hansthompson.github.io/contact.html">Github</a></li>
+    <li><a href="hansthompson.github.io/contact.html">Open Street Map</a></li>
+    <li><a href="hansthompson.github.io/contact.html">LinkedIn</a></li>
+    <p>Email: hans.thompson1@gmail.com</p>  </article>
+  <footer>
+    <p>Copyright 2021 My Personal Blog</p>
+  </footer>
+</body>
+</html>
