--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
     <h1>My Personal Blog</h1>
     <nav>
       <ul>
-        <li><a href="hansthompson.github.io/index.html">Home</a></li>
-        <li><a href="hansthompson.github.io/about.html">About</a></li>
-        <li><a href="hansthompson.github.io/contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
