--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Personal Blog</title>
+  <title>Hans Thompson's Personal Blog</title>
   <style>
     body {
       background-color: lighten(blue, 50%);
@@ -29,7 +29,7 @@
     <p>Hello, and welcome to my personal blog! Here, I will share my thoughts and experiences on a variety of topics. I hope you enjoy reading my posts as much as I enjoy writing them.</p>
   </article>
   <footer>
-    <p>Copyright 2021 My Personal Blog</p>
+    <p>Copyright 2021 Hans Thompson</p>
   </footer>
 </body>
 </html>
