--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <h2>Welcome to My Personal Blog</h2>
     <p>Hello, and welcome to my personal blog! Here, I will share my thoughts and experiences on a variety of topics. I hope you enjoy reading my posts as much as I enjoy writing them.</p>
   </article>
+  <article>
+    <h2>Enforcing Vechicle Exhaust Noise</h2>
+    <p>Let's go over where this is coming from and where it might go.</p>
+  </article>
   <footer>
     <p>Copyright 2021 Hans Thompson</p>
   </footer>
