--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     <p>Hello, and welcome to my personal blog! Here, I will share my thoughts and experiences on a variety of topics. I hope you enjoy reading my posts as much as I enjoy writing them.</p>
   </article>
   <article>
+      <p>######</p>
     <h2><a href="vechiclenoise1.html">Enforcing Vechicle Exhaust Noise</a></h2>
-    <p>Let's go over where this is coming from and where it might go.</p>
+    <p>Where this is coming from and where it might go.</p>
   </article>
+      <p>######</p>
   <footer>
     <p>Copyright 2022 Hans Thompson</p>
   </footer>
