--- a/vechiclenoise1.html
+++ b/vechiclenoise1.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <p>Enforcing Vechicle Exhaust Noise</p>
-    <h2>Motor Chuds Need To STFU</h2>
+    <h2>I think I got their attention.</h2>
     <p>It’s wintertime, nearly Christmas, and this is when I like to write some of my reflections on the past year. There would be too much for my typing finger to expand on if I put down everything however so I will just fill any readers with my thoughts on my efforts to get APD to do vehicle exhaust noise enforcement. </p>
     <p>If you haven’t heard me harp on this before, I’ve grown up in Anchorage and have a special affection for the town but one thing that has inexplicably been swept under the rug for the past decade is how all the chuds have chosen to modify their vehicles to make ridiculous amounts of noise (sorry, I tend to write long sentences). </p>
     <p>Since the state admin decided to end mandatory emissions testing in 2011, new chuds every year have been making this bold move to “make car loud and angry”. I have simply had enough of this but I also know everyone that hasn’t acclimated to this regressive future are as well. Everyone knows it's very difficult to move the police department to do something and I figured that it would be a good challenge or maybe even a test to see if it’s even possible to get them to do their job on this issue. Because this might be one of those cases where people around me are even more upset about a niche and easily resolvable issue than myself. Because I wouldn’t have been able to shepard this new ordinance passed earlier this month without all the help from around town. </p>
